--- a/Resources/views/Ticket/new.html.twig
+++ b/Resources/views/Ticket/new.html.twig
@@ -1,12 +1,10 @@
 {{ form_start(form) }}
     {# render the task's only field: description #}
-    {{ form_row(form.description) }}
-
 <h3>Ticket Lines</h3>
 <ul class="tags">
     {# iterate over each existing tag and render its only field: name #}
     {% for ticketline in form.ticketlines %}
-        <li>{{ form_row(ticketline.quantity) }}</li>
+        <li>{{ form_row(ticketline.description) }}{{ form_row(ticketline.quantity) }}</li>
     {% endfor %}
 </ul>
 {{ form_end(form) }}
