--- a/Resources/views/Ticket/new.html.twig
+++ b/Resources/views/Ticket/new.html.twig
@@ -1,10 +1,93 @@
-{{ form_start(form) }}
-    {# render the task's only field: description #}
-<h3>Ticket Lines</h3>
-<ul class="tags">
-    {# iterate over each existing tag and render its only field: name #}
-    {% for ticketline in form.ticketlines %}
-        <li>{{ form_row(ticketline.description) }}{{ form_row(ticketline.quantity) }}</li>
-    {% endfor %}
-</ul>
-{{ form_end(form) }}
+{% extends "FastFoodBundle:Ticket:layout.html.twig" %}
+
+{% block title %}New Ticket {% endblock %}
+{% block head %}
+    {{ parent() }}
+    <style type="text/css">
+        .important { color: #336699; }
+    </style>
+{% endblock %}
+
+{% block content %}
+    {{ form_start(form) }}
+    <h3>New Ticket</h3>
+    <table>
+        <tr>
+            <td>{{ form_row(form.date) }}</td>
+        </tr>
+        <tr>
+            <td><h2>Ticket Lines</h2>
+                <table class="ticketlines" data-prototype="{{ form_widget(form.ticketlines.vars.prototype)|e('html_attr') }}">
+                    {% for ticketline in form.ticketlines %}
+                        <tr>
+                            <td>{{ form_row(ticketline.description) }}</td>
+                            <td>{{ form_row(ticketline.quantity) }}</td>
+                            <td>{{ form_row(ticketline.price) }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>{{ form_row(form.details) }}</td>
+        </tr>
+
+    </table>
+    <script
+            src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        var $collectionHolder;
+
+        // setup an "add a line" link
+        var $addTicketlineLink = $('<a href="#" class="add_line_link">Add a line</a>');
+        var $newLinkLi = $('<tr></tr>').append($addTicketlineLink);
+
+        jQuery(document).ready(function() {
+            // Get the ul that holds the collection of lines
+            $collectionHolder = $('table.ticketlines');
+
+            // add the "add a line" anchor and li to the lines ul
+            $collectionHolder.append($newLinkLi);
+
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            $collectionHolder.data('index', $collectionHolder.find(':input').length);
+
+            $addTicketlineLink.on('click', function(e) {
+            // prevent the link from creating a "#" on the URL
+            e.preventDefault();
+
+            // add a new line form (see next code block)
+             addTicketlineForm($collectionHolder, $newLinkLi);
+          });
+        });
+
+
+        function addTicketlineForm($collectionHolder, $newLinkLi) {
+            // Get the data-prototype explained earlier
+            var prototype = $collectionHolder.data('prototype');
+
+            // get the new index
+            var index = $collectionHolder.data('index');
+            console.log(index);
+
+            // Replace '__name__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            var newForm = prototype.replace(/__name__/g, index);
+
+            // increase the index with one for the next item
+            $collectionHolder.data('index', index + 1);
+
+            // Display the form in the page in an li, before the "Add a line" link li
+            var $newFormLi = $('<tr></tr>').append(newForm);
+            $newLinkLi.before($newFormLi);
+        }
+    </script>
+
+    {{ form_end(form) }}
+{% endblock %}
+
+
+
