--- a/Resources/views/Product/delete.html.twig
+++ b/Resources/views/Product/delete.html.twig
@@ -1,4 +1,4 @@
-{% extends "FastFoodBundle::product_layout.html.twig" %}
+{% extends "FastFoodBundle:Product:layout.html.twig" %}
 
 {% block title %}Show Movie{% endblock %}
 {% block head %}
