Corrected TicketLines_>ticked_id not getting saved into the database

--- a/Resources/views/Ticket/list.html.twig
+++ b/Resources/views/Ticket/list.html.twig
@@ -11,11 +11,12 @@
         <h1>List Tickets</h1>
         <p class="important">
     <table>
+    <tr><th>id</th><th>Name</th><th>Date</th><th></th><th></th></tr>
         {% for ticket in tickets %}
-            <tr><td>{{ ticket.id|e }}</td><td>{{ ticket.date|date("m/d/Y") }}</td><td><a href="{{ url('delete_ticket', {'id': ticket.id}) }}">Delete</a></td></tr>
+            <tr><td>{{ ticket.id|e }}</td><td>{{ ticket.name|e }}</td><td>{{ ticket.date|date("d/m/Y") }}</td><td><a href="{{ url('edit_ticket', {'id': ticket.id}) }}">Edit</a></td><td><a href="{{ url('delete_ticket', {'id': ticket.id}) }}">Delete</a></td></tr>
         {% endfor %}
     </table>
-    <a href={{ url('new_ticket') }}>New Ticket</a>
+    <a href={{ url('new_ticket') }}>New Ticket</a><a href={{ url('product_list') }}>Product List</a>
         </p>
 {% endblock %}
 
