Moved core Ticket functionality from TicketController to Services, added events for every action on tickets

--- a/Resources/views/Ticket/delete.html.twig
+++ b/Resources/views/Ticket/delete.html.twig
@@ -1,6 +1,6 @@
-{% extends "FastFoodBundle:Product:layout.html.twig" %}
+{% extends "FastFoodBundle:Ticket:layout.html.twig" %}
 
-{% block title %}Delete Product{% endblock %}
+{% block title %}Delete Ticket{% endblock %}
 {% block head %}
     {{ parent() }}
     <style type="text/css">
@@ -8,7 +8,7 @@
     </style>
 {% endblock %}
 {% block content %}
-    <h1>Product Deleted</h1>
+    <h1>Ticket Deleted</h1>
     <p class="important">
         {{ content }}
     </p>
